--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Project Saturn</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Project Saturn</h1>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-			<li><a href="mailto:webbling@umich.edu">email</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+---
+<body>
+	<nav>
+	<ul>
+		<li><a href="/">Home</a></li>
+		<li><a href="/about">About</a></li>
+		<li><a href="/cv">CV</a></li>
+		<li><a href="/blog">Blog</a></li>
+	</ul>
+	</nav>
+	<div class="container">
+	<div class="blurb">
+		<h1>Project Saturn</h1>
+	</div><!-- /.blurb -->
+	</div><!-- /.container -->
+	<footer>
+	<ul>
+		<li><a href="mailto:webbling@umich.edu">email</a></li>
+		</ul>
+	</footer>
+</body>
